--- a/main.html
+++ b/main.html
@@ -45,6 +45,7 @@
 			<div class="price">
 				R$ <span>7.93</span>
 			</div>
+			<button>ADD TO CART</button>
 			<div class="variant">
 				<h3>SELECT A COLOR</h3>
 				<ul>
@@ -63,6 +64,11 @@
 			</div>
 		</div>
 	</section>
+	
+	<div class="description">
+		<h2>BENEFITS</h2>
+		<p>An apple is a round, edible fruit produced by an apple tree (Malus domestica). Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor</p>
+	</div>
 </body>
 
 </html>
